Correções e verificar tentativas

--- a/dearcry.ipynb
+++ b/dearcry.ipynb
@@ -12,9 +12,33 @@
     "# Arquivo criptografado\n",
     "f = open(\"sample.txt.CRYPT\", \"rb\")\n",
     "sample = f.read(296)\n",
-    "f.close()\n",
-    "\n",
-    "size = int.from_bytes(sample[279:270:-1]) # tamanho do arquivo"
+    "f.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x00\\x00\\x01\\x00'\n",
+      "256\n",
+      "524288000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Campos do cabeçalhos\n",
+    "size = int.from_bytes(sample[279:271:-1]) # 272-279\n",
+    "key_size = int.from_bytes(sample[11:7:-1]) # 8-11\n",
+    "# key 12-267\n",
+    "# 280 - file \n",
+    "print(sample[11:7:-1])\n",
+    "print(key_size)\n",
+    "print(size)"
    ]
   },
   {
@@ -27,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +60,7 @@
        "'pid.5928.vad.0x130000-0x16ffff.dmp pid.5928.vad.0x190000-0x191fff.dmp pid.5928.vad.0x1b0000-0x1b3fff.dmp pid.5928.vad.0x200000-0x3fffff.dmp pid.5928.vad.0x2530000-0x253ffff.dmp pid.5928.vad.0x2540000-0x264afff.dmp pid.5928.vad.0x2650000-0x2757fff.dmp pid.5928.vad.0x400000-0x4fffff.dmp pid.5928.vad.0x510000-0x513fff.dmp pid.5928.vad.0x550000-0x64ffff.dmp pid.5928.vad.0x6b0000-0x6bffff.dmp pid.5928.vad.0x7ff50000-0x7ff58fff.dmp pid.5928.vad.0x7ff60000-0x7ff61fff.dmp pid.5928.vad.0x7ff70000-0x7ff80fff.dmp pid.5928.vad.0x7ff90000-0x7ff91fff.dmp pid.5928.vad.0xa80000-0xa8ffff.dmp'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +82,7 @@
    "metadata": {},
    "source": [
     "### Entropia\n",
-    "Uma estimativa do valor de entropia é suficiente para diferenciar regiões de memória com alta entropia. Uma boa estimativa é a quantidade de bytes diferentes em uma sequência de bytes.\n",
+    "Uma estimativa do valor de entropia é suficiente para diferenciar regiões de memória com alta entropia. Uma boa estimativa é a quantidade de valores diferentes em uma sequência de bytes.\n",
     "\n",
     "$$\n",
     "    \\text{entropy}(x) = \\sum^n_{i=0}{- p_i \\cdot \\log_2(x_i)}\n",
@@ -67,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def entropy_st(sequence: bytes) -> float:\n",
     "    \"\"\"Estima a entropia da sequencia de bytes.\"\"\"\n",
     "\n",
-    "    # Número de valores diferentes\n",
+    "    # Número de valores únicos\n",
     "    return len(set(sequence))"
    ]
   },
@@ -91,15 +115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "count = 0\n",
+    "\n",
     "def try_decrypt(data: bytes, key: bytes, iv: bytes):\n",
     "    \"\"\"\n",
     "    Tenta descriptografar os dados, retorna o resultado caso\n",
     "    consiga decodificar em uma string unicode.\n",
     "    \"\"\"\n",
+    "    global count\n",
+    "    count += 1\n",
     "    cipher = AES.new(key=key, iv=iv, mode=AES.MODE_CBC)\n",
     "    decrypted = cipher.decrypt(data)\n",
     "    \n",
@@ -107,7 +135,6 @@
     "        txt = decrypted.decode()\n",
     "        if txt[0] == \"g\":\n",
     "            return txt\n",
-    "            \n",
     "    except UnicodeDecodeError:\n",
     "        pass"
    ]
@@ -117,12 +144,12 @@
    "metadata": {},
    "source": [
     "### Limite de entropia\n",
-    "O limite da estimativa de entropia foi determinado experimentalmente, definido como 75% de $n$, em que $n$ é o tamanho da região de memória buscada. Ou seja, para regiões de memória de tamanho 48, $0.75 \\cdot 48 = 40$."
+    "O limite da estimativa de entropia foi determinado por tentativa e erro, definido como 40 bytes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,15 +173,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recuperação"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pid.5928.vad.0x400000-0x4fffff.dmp gdlndeygjcyhvcaw\n"
+      "pid.5928.vad.0x400000-0x4fffff.dmp gdlndeygjcyhvcaw\n",
+      "3122955 tentativas\n"
      ]
     }
    ],
@@ -170,12 +205,14 @@
     "        iv = seq[32:]\n",
     "\n",
     "        print(fname, txt)\n",
-    "        break"
+    "        break\n",
+    "\n",
+    "print(str(count) + \" tentativas\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
