Typo e bytes percorridos

--- a/dearcry.ipynb
+++ b/dearcry.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "# Campos do cabeçalhos\n",
+    "# Campos do cabeçalho\n",
     "size = int.from_bytes(sample[279:271:-1]) # 272-279\n",
     "key_size = int.from_bytes(sample[11:7:-1]) # 8-11\n",
     "# key 12-267\n",
@@ -51,18 +51,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'pid.5928.vad.0x130000-0x16ffff.dmp pid.5928.vad.0x190000-0x191fff.dmp pid.5928.vad.0x1b0000-0x1b3fff.dmp pid.5928.vad.0x200000-0x3fffff.dmp pid.5928.vad.0x2530000-0x253ffff.dmp pid.5928.vad.0x2540000-0x264afff.dmp pid.5928.vad.0x2650000-0x2757fff.dmp pid.5928.vad.0x400000-0x4fffff.dmp pid.5928.vad.0x510000-0x513fff.dmp pid.5928.vad.0x550000-0x64ffff.dmp pid.5928.vad.0x6b0000-0x6bffff.dmp pid.5928.vad.0x7ff50000-0x7ff58fff.dmp pid.5928.vad.0x7ff60000-0x7ff61fff.dmp pid.5928.vad.0x7ff70000-0x7ff80fff.dmp pid.5928.vad.0x7ff90000-0x7ff91fff.dmp pid.5928.vad.0xa80000-0xa8ffff.dmp'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 pid.5928.vad.0x130000-0x16ffff.dmp\n",
+      "1 pid.5928.vad.0x190000-0x191fff.dmp\n",
+      "2 pid.5928.vad.0x1b0000-0x1b3fff.dmp\n",
+      "3 pid.5928.vad.0x200000-0x3fffff.dmp\n",
+      "4 pid.5928.vad.0x2530000-0x253ffff.dmp\n",
+      "5 pid.5928.vad.0x2540000-0x264afff.dmp\n",
+      "6 pid.5928.vad.0x2650000-0x2757fff.dmp\n",
+      "7 pid.5928.vad.0x400000-0x4fffff.dmp\n",
+      "8 pid.5928.vad.0x510000-0x513fff.dmp\n",
+      "9 pid.5928.vad.0x550000-0x64ffff.dmp\n",
+      "10 pid.5928.vad.0x6b0000-0x6bffff.dmp\n",
+      "11 pid.5928.vad.0x7ff50000-0x7ff58fff.dmp\n",
+      "12 pid.5928.vad.0x7ff60000-0x7ff61fff.dmp\n",
+      "13 pid.5928.vad.0x7ff70000-0x7ff80fff.dmp\n",
+      "14 pid.5928.vad.0x7ff90000-0x7ff91fff.dmp\n",
+      "15 pid.5928.vad.0xa80000-0xa8ffff.dmp\n"
+     ]
     }
    ],
    "source": [
@@ -74,7 +86,8 @@
     "files = df[(df[\"PrivateMemory\"] == 1) & (df[\"Protection\"] == \"PAGE_READWRITE\")]\\\n",
     "    .sort_values(\"Start VPN\")[\"File output\"].to_list()\n",
     "\n",
-    "\" \".join(files)\n"
+    "for i, f in enumerate(files):\n",
+    "    print(i, f)\n"
    ]
   },
   {
@@ -91,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,10 +162,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
+    "size_scanned = 0\n",
+    "\n",
     "def scan_decrypt(fname: str, data: bytes, threshold=40, window=48):\n",
     "    \"\"\"\n",
     "    Busca por regiões em que a estimativa de entropia é\n",
@@ -163,6 +178,9 @@
     "    page = f.read()\n",
     "\n",
     "    for i in range(0, len(page)):\n",
+    "        global size_scanned\n",
+    "        size_scanned += 1\n",
+    "\n",
     "        seq = page[i:i+window]\n",
     "        ent = entropy_st(seq)\n",
     "\n",
@@ -181,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +207,8 @@
      "output_type": "stream",
      "text": [
       "pid.5928.vad.0x400000-0x4fffff.dmp gdlndeygjcyhvcaw\n",
-      "3122955 tentativas\n"
+      "1040985 tentativas\n",
+      "5646677 bytes percorridos\n"
      ]
     }
    ],
@@ -207,12 +226,13 @@
     "        print(fname, txt)\n",
     "        break\n",
     "\n",
-    "print(str(count) + \" tentativas\")"
+    "print(str(count) + \" tentativas\")\n",
+    "print(str(size_scanned) + \" bytes percorridos\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
